# LU-Player-Tracker-Code

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
Components/cJSON/: CMakeLists.txt  cJSON.c
Components/cJSON/include/: cJSON.h
Components/flashStorage/: CMakeLists.txt  flashStorage.c
Components/flashStorage/include/: flashStorage.h
Components/gpioControl/: CMakeLists.txt  gpioControl.c
Components/gpioControl/include/: gpioControl.h
Components/httpServer/: CMakeLists.txt  htmlFill.c  httpServer.c
Components/httpServer/HTML/: led_settings.html  mqtt_settings.html  root.html  saved_page.html  wifi-settings.html
Components/httpServer/include/: htmlFill.h  httpServer.h
Components/iPixelDriver/: CMakeLists.txt  iPixel.c
Components/iPixelDriver/include/: iPixel.h
Components/ledControl/: CMakeLists.txt  ledControl.c
Components/ledControl/include/: ledControl.h
Components/linkedList/: CMakeLists.txt  linkedList.c
Components/linkedList/include/: linkedList.h
Components/mqttControl/: CMakeLists.txt  mqtt.c
Components/mqttControl/include/: mqtt.h
Components/sevenSegmentControl/: CMakeLists.txt  sevenSegmentControl.c
Components/sevenSegmentControl/include/: sevenSegmentControl.h
Components/wifiControl/: CMakeLists.txt  wifi.c
Components/wifiControl/include/: wifi.h
main/: CMakeLists.txt  main.c
